cmake_minimum_required(VERSION 3.14)
project(rise_through_the_ranks)

set(CMAKE_CXX_STANDARD 11)

add_executable(rise_through_the_ranks main.cpp Space.cpp Space.hpp Asia.cpp Asia.hpp Game.cpp Game.hpp Fighter.cpp Fighter.hpp Ninja.cpp Ninja.hpp MercenaryShop.cpp MercenaryShop.hpp Validation.cpp Validation.hpp Americas.cpp Americas.hpp Europe.cpp Europe.hpp Champions.cpp Champions.hpp)