cmake_minimum_required(VERSION 3.14)
project(rise_through_the_ranks)

set(CMAKE_CXX_STANDARD 11)

add_executable(rise_through_the_ranks main.cpp Space.cpp Space.hpp WarZone.cpp WarZone.hpp Game.cpp Game.hpp Fighter.cpp Fighter.hpp Gru.cpp Gru.hpp MercenaryShop.cpp MercenaryShop.hpp Validation.cpp Validation.hpp Champions.cpp Champions.hpp ChineseSop.cpp ChineseSop.hpp Sas.cpp Sas.hpp Seal.cpp Seal.hpp)